chore: Tweak boilerplate

--- a/example/public/index.html
+++ b/example/public/index.html
@@ -10,7 +10,7 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>react-components</title>
+    <title>react-library-boilerplate</title>
   </head>
 
   <body>
